--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html>
 
 <head>
-  <title>Our Company</title>
+  <title>memehub</title>
 </head>
 
 <body>
 
-  <h1>Welcome to Our Company</h1>
-  <h2>Web Site Main Ingredients:</h2>
+  <h1>welcum 2 memehub</h1>
+  <h2>where 2 get memes:</h2>
 
-  <p>Pages (HTML)</p>
-  <p>Style Sheets (CSS)</p>
-  <p>Computer Code (JavaScript)</p>
-  <p>Live Data (Files and Databases)</p>
+  <p>pages (html)</p>
+  <p>style sheets (css)</p>
+  <p>computer code (javascript)</p>
+  <p>live data (files and databases)</p>
 
 </body>
 </html>
