--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <h1>welcum 2 memehub</h1>
-  <a href url="http://cbmanes.github.io/memes/about">about the arthur</a>
+  <a href="http://cbmanes.github.io/memes/about">about the arthur</a>
   <h2>where 2 get memes:</h2>
 
   <p>pages (html)</p>
