--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 
 <head>
   <title>memehub</title>
+    <link href="Site.css" rel="stylesheet">
+
 </head>
 
 <body>
-
+<div id="main"></div>
   <h1>welcum 2 memehub</h1>
   <a href="http://cbmanes.github.io/memes/about">about the arthur</a>
   <h2>where 2 get memes:</h2>
@@ -15,6 +17,7 @@
   <p>style sheets (css)</p>
   <p>computer code (javascript)</p>
   <p>live data (files and databases)</p>
+  </div>
 
 </body>
 </html>
