--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>memehub</title>
-    <link href="Site.css" rel="stylesheet">
+    <link href="memes.css" rel="stylesheet">
 
 </head>
 
