--- a/about.html
+++ b/about.html
@@ -2,13 +2,14 @@
 <html>
 
 <head>
+<link href="memes.css" rel="stylesheet">
   <title>about the arthur</title>
 </head>
 
 <body>
-
+<div id="main">
   <h1>about the arthur</h1>
   <p>i am a c00l c4t with 6 friends on myspace i will quote "pwn all the n00bs" if you mess with ~oniichan</p>
-
+</div>
 </body>
 </html>
