--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <p>style sheets (css)</p>
   <p>computer code (javascript)</p>
   <p>live data (files and databases)</p>
+  <footer id="foot01"></footer>
   </div>
-
+<script src="Script.js"></script>
 </body>
 </html>
