--- a/about.html
+++ b/about.html
@@ -10,6 +10,8 @@
 <div id="main">
   <h1>about the arthur</h1>
   <p>i am a c00l c4t with 6 friends on myspace i will quote "pwn all the n00bs" if you mess with ~oniichan</p>
+  <footer id="foot01"></footer>
 </div>
+<script src="Script.js"></script>
 </body>
 </html>
