--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
   <p>live data (files and databases)</p>
   <footer id="foot01"></footer>
   </div>
-<script src="Script.js"></script>
+<script src="scripts.js"></script>
 </body>
 </html>
