--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <p>live data (files and databases)</p>
   <footer id="foot01"></footer>
   </div>
+  <button onclick="myFunction('carl azus','meme overlord')">click for hardcore porn ;)</button>
+
+<p id="demo"></p>
 <script src="scripts.js"></script>
 </body>
 </html>
