--- a/index.html
+++ b/index.html
@@ -19,9 +19,17 @@
   <p>live data (files and databases)</p>
   <footer id="foot01"></footer>
   </div>
-  <button onclick="myFunction('carl azus','meme overlord')">click for hardcore porn ;)</button>
+
+<button onclick="myFunction('carl azus','meme overlord')">click for hardcore porn ;)</button>
 
 <p id="demo"></p>
-<script src="scripts.js"></script>
+
+function myFunction(name,job) {
+    document.getElementById("demo").innerHTML =
+    "hello " + name + ", the " + job + ".";
+}
+document.getElementById("foot01").innerHTML =
+"<p>"&copy;  " + new Date().getFullYear() + im an og nigga, all rights reserved lmao</p>";
+
 </body>
 </html>
