--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+<script src="script.js"></script>
 <head>
   <title>memehub</title>
     <link href="memes.css" rel="stylesheet">
@@ -8,13 +8,6 @@
 </head>
 
 <body>
-function myFunction(name,job) {
-    document.getElementById("demo").innerHTML =
-    "hello " + name + ", the " + job + ".";
-}
-document.getElementById("foot01").innerHTML =
-"<p>"&copy;  " + new Date().getFullYear() + im an og nigga, all rights reserved lmao</p>";
-
 <div id="main"></div>
   <h1>welcum 2 memehub</h1>
   <a href="http://cbmanes.github.io/memes/about">about the arthur</a>
@@ -26,10 +19,7 @@ document.getElementById("foot01").innerHTML =
   <p>live data (files and databases)</p>
   <footer id="foot01"></footer>
   </div>
-
-<button onclick="myFunction('carl azus','meme overlord')">click for hardcore porn ;)</button>
-
-<p id="demo"></p>
+  
 
 </body>
 </html>
