--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   <p>live data (files and databases)</p>
   <footer id="foot01"></footer>
   </div>
-<script src="script.js"></script>  
+<script src="https://rawgithub.com/cbmanes/repository/branch/script.js
+"></script>  
 
 </body>
 </html>
