--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <p>pages (html)</p>
   <p>style sheets (css)</p>
   <p>computer code (javascript)</p>
-  <p>live data (files and databases)</p>
+  <p>live data (files & databases)</p>
   <footer id="foot01"></footer>
   </div>
 <script src="https://rawgit.com/cbmanes/memes/gh-pages/scripts.js
