--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <p>live data (files and databases)</p>
   <footer id="foot01"></footer>
   </div>
-<script src="https://rawgit.com/cbmanes/memes/gh-pages/scripts.js
+<script src="https://cdn.rawgit.com/cbmanes/memes/gh-pages/scripts.js
 "></script>  
 
 </body>
